Add acceptance test for listing patients

--- a/app/views/patients/index.haml
+++ b/app/views/patients/index.haml
@@ -1,1 +1,18 @@
-%h1 Patients
+%h1 Pacientes
+
+%table.table.table-striped
+  %thead
+    %tr
+      %th # Historia
+      %th Apellidos
+      %th Nombres
+      %th Sexo
+      %th F. de Nacimiento
+  %tbody
+  - @patients.each do |patient|
+    %tr
+      %td= patient.medical_history
+      %td= patient.last_name
+      %td= patient.first_name
+      %td= patient.gender
+      %td= patient.birthdate
