Update layout for better presentation

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -19,6 +19,9 @@
             %span.icon-bar
             %span.icon-bar
         .navbar-collapse.collapse#navbar-main
+          %ul.nav.navbar-nav
+            %li.active
+              = link_to 'Pacientes', patients_path
           %ul.nav.navbar-nav.navbar-right
             %li
               %a(href='#') Salir
