--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -5,7 +5,7 @@
     %meta{name: 'viewport', content: 'width=device-width, initial-scale=1, user-scalable=no'}
     = favicon_link_tag 'favicon.ico'
     = javascript_include_tag 'application'
-    = stylesheet_link_tag '//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/sandstone/bootstrap.min.css'
+    = stylesheet_link_tag '//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/paper/bootstrap.min.css'
     = stylesheet_link_tag '//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'
     = stylesheet_link_tag 'application', media: 'all'
     = csrf_meta_tags
