--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -7,6 +7,7 @@
     = javascript_include_tag 'application'
     = stylesheet_link_tag '//maxcdn.bootstrapcdn.com/bootswatch/3.3.6/paper/bootstrap.min.css'
     = stylesheet_link_tag '//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'
+    = stylesheet_link_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/css/bootstrap-datepicker.min.css'
     = stylesheet_link_tag 'application', media: 'all'
     = csrf_meta_tags
   %body
@@ -30,3 +31,5 @@
       = yield
 
     = javascript_include_tag '//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'
+    = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/js/bootstrap-datepicker.js'
+    = javascript_include_tag '//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.6.0/locales/bootstrap-datepicker.es.min.js'
