Remove icon from new patient button

--- a/app/views/patients/index.haml
+++ b/app/views/patients/index.haml
@@ -1,7 +1,6 @@
 / XXX: Pull out the labels from a config file.
 .row.pull-right.align-right
-  = link_to new_patient_path, class: "btn btn-success" do
-    <i class="fa fa-male"></i> Nuevo paciente
+  = link_to "Nuevo paciente", new_patient_path, class: "btn btn-success"
 
 %table.table.table-striped
   %thead
