Pull out partials from `new` anamneses view

--- a/app/views/anamneses/new.haml
+++ b/app/views/anamneses/new.haml
@@ -1,88 +1,4 @@
 = error_messages_for @anamnesis
-.form
-  .panel.panel-default
-    .panel-heading
-      %b Datos de Filiación
-    .panel-body
-      .row-fluid
-        .form-group.col-md-3
-          .input-group
-            %span.input-group-addon.input-sm Fecha
-            %input.form-control.input-sm.colored{ disabled: 'disabled', value: Date.today }
-        .form-group.col-md-3
-          .input-group
-            %span.input-group-addon.input-sm Fecha Nacimiento
-            %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.birthdate.strftime("%Y-%m-%d") }
-        .form-group.col-md-3
-          .input-group
-            %span.input-group-addon.input-sm # Cédula
-            %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.identity_card_number }
-        .form-group.col-md-3
-          .input-group
-            %span.input-group-addon.input-sm Historia
-            %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.medical_history }
 
-      .row-fluid
-        .form-group.col-md-6
-          .input-group
-            %span.input-group-addon.input-sm Apellidos
-            %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.last_name }
-        .form-group.col-md-6
-          .input-group
-            %span.input-group-addon.input-sm Nombres
-            %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.first_name }
-
-      .row-fluid
-        .form-group.col-md-2
-          .input-group
-            %span.input-group-addon.input-sm Sexo
-            %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.gender }
-        .form-group.col-md-2
-          .input-group
-            %span.input-group-addon.input-sm Edad
-            %input.form-control.input-sm.colored.patient-age{ disabled: 'disabled', value: @patient.age }
-        .form-group.col-md-4
-          .input-group
-            %span.input-group-addon.input-sm Estado Civil
-            %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.civil_status }
-        .form-group.col-md-4
-          .input-group
-            %span.input-group-addon.input-sm Ocupación
-            %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.profession }
-
-= form_for [@patient, @anamnesis], html: { class: "form" } do |f|
-  .panel.panel-default
-    .panel-heading
-      %b Antecedentes Personales
-    .panel-body
-      .row-fluid
-        .form-group.col-md-12
-          = f.text_area :personal_history, class: "form-control input-sm"
-        .form-group.col-md-12
-          .input-group
-            %span.input-group-addon.input-sm Antecedentes Quirúrgicos
-            = f.text_field :surgical_history, class: "form-control input-sm"
-        .form-group.col-md-4
-          .input-group
-            %span.input-group-addon.input-sm Alergias
-            = f.text_field :allergies, class: "form-control input-sm"
-        .form-group.col-md-4
-          .input-group
-            %span.input-group-addon.input-sm Observación
-            = f.text_field :observations, class: "form-control input-sm"
-        .form-group.col-md-4
-          .input-group
-            %span.input-group-addon.input-sm Hábitos
-            = f.text_field :habits, class: "form-control input-sm"
-
-  .panel.panel-default
-    .panel-heading
-      %b Antecedentes Familiares
-    .panel-body
-      .row-fluid
-        .form-group.col-md-12
-          = f.text_area :family_history, class: "form-control input-sm"
-
-  .row-fluid
-    = link_to "Cancelar", patients_path, class: "btn btn-default"
-    = f.submit "Guardar", class: "btn btn-success"
+= render 'patient'
+= render 'form'
