Update placeholder in the search text box

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -26,7 +26,7 @@
 
           = form_tag(patients_path, method: 'GET', class: 'navbar-form navbar-left') do
             .form-group
-              = text_field_tag :search, params[:search], placeholder: 'Apellidos del paciente', class: 'form-control'
+              = text_field_tag :search, params[:search], placeholder: 'APELLIDOS', class: 'form-control'
             %button.btn.btn-default{ type: "submit" } Buscar
 
           %ul.nav.navbar-nav.navbar-right
