Add partial to register consultations

--- a/app/views/application/_anamnesis.haml
+++ b/app/views/application/_anamnesis.haml
@@ -1,9 +1,7 @@
 .form
-  .panel.panel-warning.personal-history
+  .panel.panel-default.personal-history
     .panel-heading
       %b Antecedentes Personales
-      %small.pull-right
-        %b #{@patient.anamnesis.allergies}
     .panel-body
       .row-fluid
         .form-group.col-md-12
