--- a/app/views/consultations/_form.haml
+++ b/app/views/consultations/_form.haml
@@ -129,9 +129,9 @@
           = f.fields_for :diagnoses do |ff|
             %tr
               %td
-                = ff.text_field :description, class: "form-control input-sm"
+                = ff.text_field :description, class: "form-control input-sm disease", autocomplete: "off"
               %td
-                = ff.text_field :disease_code, class: "form-control input-sm"
+                = ff.text_field :disease_code, class: "form-control input-sm colored code", disabled: true
               %td.text-center
                 = ff.radio_button :type, "presuntive", class: "input-sm"
               %td.text-center
