Make `disease_code` field read-only

--- a/app/views/consultations/_form.haml
+++ b/app/views/consultations/_form.haml
@@ -131,7 +131,7 @@
               %td
                 = ff.text_field :description, class: "form-control input-sm disease", autocomplete: "off"
               %td
-                = ff.text_field :disease_code, class: "form-control input-sm colored code", disabled: true
+                = ff.text_field :disease_code, class: "form-control input-sm code", readonly: "true"
               %td.text-center
                 = ff.radio_button :type, "presuntive", class: "input-sm"
               %td.text-center
