Add medical history menu conditionally

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -23,6 +23,10 @@
           %ul.nav.navbar-nav
             = nav_to 'Pacientes', patients_path
             = nav_to 'Medicinas', medicines_path
+            - if consultations?
+              %li
+                %a#show(href="#")
+                  %strong.text-primary Historia
 
           = form_tag(patients_path, method: 'GET', class: 'navbar-form navbar-left') do
             .form-group
