--- a/app/views/consultations/_form.haml
+++ b/app/views/consultations/_form.haml
@@ -156,3 +156,5 @@
   .row-fluid
     = link_to "Cancelar", patients_path, class: "btn btn-default"
     = f.submit "Guardar", class: "btn btn-success"
+
+= render 'modal'
