Update label for diagnosis

--- a/app/views/consultations/_modal.haml
+++ b/app/views/consultations/_modal.haml
@@ -38,7 +38,7 @@
   %table.table.table-striped
     %thead
       %tr{ style: "background-color: #FF9800; color: #FFF" }
-        %th.col-md-12 Examen Diagnóstico
+        %th.col-md-12 Diagnóstico
     %tbody
       {{#diagnoses}}
       %tr
