--- a/app/assets/stylesheets/hippocrates.css
+++ b/app/assets/stylesheets/hippocrates.css
@@ -1,5 +1,5 @@
 body {
-  padding-top: 90px;
+  padding-top: 105px;
 }
 
 .align-right {
@@ -59,4 +59,85 @@ body {
 .autocomplete-group strong {
   display: block;
   border-bottom: 1px solid #000;
+}
+
+.hint {
+  display: block;
+  position: fixed;
+  top: 105px;
+  right: 0;
+  overflow: hidden;
+  z-index: 200;
+}
+
+.hint-box {
+  margin-right: -220px;
+  position: relative;
+  z-index: 200;
+  transition-duration: 0.4s;
+}
+
+.hint-box.show {
+  margin-right: 0;
+}
+
+.hint-icon {
+  background: #1ab394;
+  position: absolute;
+  padding: 7px 10px 7px 13px;
+  border-radius: 20px 0 0 20px;
+  font-size: 16px;
+  top: 0;
+  left: 0;
+  width: 40px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.hint-content {
+  width: 220px;
+  margin-left: 40px;
+  background: #f3f3f4;
+}
+
+.hint-content .hint-title {
+  background: #efefef;
+  text-transform: uppercase;
+  font-weight: 500;
+  display: block;
+  padding: 10px 15px 10px 25px;
+  font-size: 12px;
+  cursor: pointer;
+}
+
+.hint-item {
+  padding: 10px 30px;
+  display: block;
+}
+
+.hint-item > .row > .col-xs-1 {
+  padding-right: 0;
+  padding-left: 8px;
+}
+
+.hint-item > .row > .col-xs-10 {
+  padding-right: 0;
+  padding-left: 15px;
+  font-weight: 500;
+}
+
+.progress {
+  margin-bottom: 0;
+  cursor: pointer;
+}
+
+.progress-hint {
+  display: none;
+  padding-bottom: 7px;
+  cursor: pointer;
+}
+
+.text-center > span.text-mute {
+  padding-left: 5px;
+  font-weight: 500;
 }
