--- a/app/assets/stylesheets/hippocrates.css
+++ b/app/assets/stylesheets/hippocrates.css
@@ -141,3 +141,19 @@ body {
   padding-left: 5px;
   font-weight: 500;
 }
+
+.prescriptions {
+  margin-bottom: 0;
+}
+
+.prescriptions > table {
+  margin-bottom: 10px;
+}
+
+.diagnoses {
+  margin-bottom: 0;
+}
+
+.diagnoses > table {
+  margin-bottom: 10px;
+}
