Add anamnesis hint to menu

--- a/app/views/anamneses/new.haml
+++ b/app/views/anamneses/new.haml
@@ -1,2 +1,5 @@
+= content_for :nav_option do
+  = active_nav_to('Anamnesis', new_patient_anamnesis_path(@patient.id))
+
 = render 'patient'
 = render 'form'
