--- a/app/views/patients/_form.haml
+++ b/app/views/patients/_form.haml
@@ -1,6 +1,6 @@
 = error_messages_for @patient
 = form_for @patient, html: { class: "form" } do |f|
-  .panel.panel-default
+  .panel.panel-primary
     .panel-heading
       %b Datos de Filiación
     .panel-body
