--- a/app/views/application/_anamnesis.haml
+++ b/app/views/application/_anamnesis.haml
@@ -1,5 +1,5 @@
 .form
-  .panel.panel-default.personal-history
+  .panel.panel-success
     .panel-heading
       %b Antecedentes Personales
     .panel-body
@@ -22,7 +22,7 @@
           .input-group
             %span.input-group-addon.input-sm Hábitos
             %input.form-control.input-sm.colored{ disabled: 'disabled', value: @patient.anamnesis.habits }
-  .panel.panel-default
+  .panel.panel-success
     .panel-heading
       %b Antecedentes Familiares
     .panel-body
